update lab2 part 2

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -64,6 +64,15 @@
           </div>
         </div>
       </div>
+      <div class="table">
+        <div class="color-picker-container">
+          <input type="color" id="colorPicker" />
+        </div>
+        <table id="myTable">
+          <tbody></tbody>
+        </table>
+      </div>
     </div>
+    <script type="text/javascript" src="table.js"></script>
   </body>
 </html>
